# Domain_data_bot

./: .gitignore  README.md  pyproject.toml
alembic/versions/: 829b823c9a47_add_tutorial_model.py
bot/: __main__.py  bot.py  logger.py  logic.py
bot/filters/: domain.py
bot/handlers/: __init__.py  all_info.py  checker.py  help.py  reminder.py  start.py
bot/keyboards/: __init__.py
bot/states/: actions.py  lang.py
bot/utils/: domain_information.py  logic.py  schedule.py  translations.py
db/: __init__.py  base.py  models.py
parser/: index.html  main.py
parser/data/:  all_tdl.json
