[tool.poetry]
name = "domen"
version = "0.1.0"
description = ""
authors = ["'Horrorzero' <vladpushkar82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0b8"
asyncwhois = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
